--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,39 @@
+
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: white;
+ 
+    position:relative;  /* reset do position, não relacionado ao demo, mas bom pra uso geral.  */
+  margin:0;           /* Zeramos as margens e o padding do UL para as células.encostarem     */
+  padding:0;
+  width:100%;         /* por default, os blocos são 100%, mas vamos garantir isso.           */
+  height:100%;
+
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+
 }
+
+@media(min-width:700px){
+	.wrapper{
+	  display: grid;
+	  grid-template-columns: 1fr 2fr;
+	}
+  
+	.wrapper > *{
+	  padding:2em;
+	}
+  
+	.company-info h3, .company-info ul, .brand{
+	  text-align: left;
+	}
+  }
+
+  .publi h1{
+	  color: black;
+	  text-align: center;
+	  justify-content: center;
+  }
